# simply-connect

./: .coverage  .env  .env.example  .gitignore  .python-version  AGENT.md  README.md  profile.json  pyproject.toml  webmcp.html
admin/: intake_map.md
context/: README.md  business.md  contracts.md  debit_notes.md  parties.md  preferences.md  properties.md  tenants.md  utilities.md
simply_connect/: __init__.py  admin_cli.py  backends.py  brain.py  cli.py  config.py  context_manager.py  curator.py  ext_loader.py  eyes.py  ingestion.py  intelligence.py  mcp_server.py  relay.py  session_manager.py  tools.py  web_relay.py
simply_connect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
simply_connect/runtimes/: __init__.py  base.py  cli.py  sdk.py
tests/: conftest.py  test_admin_init.py  test_amex_cli_integration.py  test_amex_integration.py  test_amex_phase1_extraction.py  test_amex_regression.py  test_backends.py  test_backends_vision.py  test_brain.py  test_brain_tools.py  test_cli_docling_integration.py  test_cli_tools.py  test_context_manager.py  test_context_manager_starters.py  test_credit_card_cr_exclusion.py  test_curator.py  test_domain_startup.py  test_e2e_next_design.py  test_extensions_loader.py  test_ingestion_parser.py  test_intelligence.py  test_legal_contracts_domain.py  test_mcp_server.py  test_minpaku_super_landlord_domain.py  test_multi_role.py  test_new_domain.py  test_relay_document.py  test_sdk_runtime.py  test_web_auth.py
tests/e2e/: conftest.py  test_e2e_intelligence.py
tests/e2e/fixtures/: .gitignore
